[gd_scene format=3 uid="uid://brgg0ha0ubxpr"]

[ext_resource type="Script" uid="uid://co88mebnsdxsm" path="res://scripts/tutorial/tutorial_ui.gd" id="1_jh3ja"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u8uxq"]
content_margin_left = 20.0
content_margin_top = 14.0
content_margin_right = 20.0
content_margin_bottom = 14.0
bg_color = Color(0.078431375, 0.050980393, 0.039215688, 0.8235294)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.8509804, 0.41960785, 0.18039216, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
shadow_size = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jh3ja"]
content_margin_left = 10.0
content_margin_top = 4.0
content_margin_right = 10.0
content_margin_bottom = 4.0
bg_color = Color(0.8509804, 0.41960785, 0.18039216, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="Animation" id="Animation_u8uxq"]
resource_name = "RESET"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 570)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Panel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Panel/MarginContainer/HBox/KeyContainer/KeyLabel:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_jh3ja"]
resource_name = "pulse"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel/MarginContainer/HBox/KeyContainer/KeyLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0.83137256, 0.4862745, 0.8862745), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_e0728"]
resource_name = "slide_in"
length = 0.35
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.33333334),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 650), Vector2(0, 570)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Panel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.33333334),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_p7sqr"]
resource_name = "slide_out"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Panel:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 570), Vector2(0, 650)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4l4jk"]
_data = {
&"RESET": SubResource("Animation_u8uxq"),
&"pulse": SubResource("Animation_jh3ja"),
&"slide_in": SubResource("Animation_e0728"),
&"slide_out": SubResource("Animation_p7sqr")
}

[node name="TutorialUI" type="CanvasLayer" unique_id=1669778]
script = ExtResource("1_jh3ja")

[node name="Panel" type="PanelContainer" parent="." unique_id=921567093]
modulate = Color(1, 1, 1, 0)
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -78.0
offset_right = 300.0
grow_vertical = 0
size_flags_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_u8uxq")

[node name="MarginContainer" type="MarginContainer" parent="Panel" unique_id=220130200]
layout_mode = 2

[node name="HBox" type="HBoxContainer" parent="Panel/MarginContainer" unique_id=1132021129]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="KeyContainer" type="PanelContainer" parent="Panel/MarginContainer/HBox" unique_id=1855684797]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_jh3ja")

[node name="KeyLabel" type="Label" parent="Panel/MarginContainer/HBox/KeyContainer" unique_id=1890778575]
layout_mode = 2
theme_override_colors/font_color = Color(0.078431375, 0.050980393, 0.039215688, 1)
text = "WASD"

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/HBox" unique_id=291372752]
layout_mode = 2
size_flags_vertical = 4

[node name="HintLabel" type="Label" parent="Panel/MarginContainer/HBox/VBoxContainer" unique_id=1701434913]
layout_mode = 2
theme_override_colors/font_color = Color(0.9490196, 0.8784314, 0.7490196, 1)
theme_override_font_sizes/font_size = 18
text = "Mova o personagem"

[node name="ProgressLabel" type="Label" parent="Panel/MarginContainer/HBox/VBoxContainer" unique_id=1201794093]
layout_mode = 2
theme_override_colors/font_color = Color(0.8509804, 0.41960785, 0.18039216, 1)
theme_override_font_sizes/font_size = 13

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=351795156]
libraries/ = SubResource("AnimationLibrary_4l4jk")
